--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -2,9 +2,14 @@
   "extends": "@local/tsconfig/library.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "dist",
   },
-  "include": ["**/*.ts"],
-  "exclude": ["dist", "node_modules"],
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules"
+  ],
   "references": []
 }
