--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -4,7 +4,7 @@
     "composite": true,
     "lib": ["dom", "dom.iterable", "es2022"],
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node16",
     "inlineSourceMap": true,
     "sourceMap": false,
     "baseUrl": ".",
